Fixed CSS so webpage container would stretch across the whole window

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -256,6 +256,10 @@ canvas {
   }
 }
 
+#container {
+  width: 100%;
+}
+
 
 /*------------------about section---------------------------*/
 
